k8s/factorio-admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorio-admin
  namespace: factorio
  labels:
    app: factorio-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factorio-admin
  template:
    metadata:
      annotations:
        deploy-trigger: "2026-04-02-force-rollout"
      labels:
        app: factorio-admin
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: factorio-factorio-server-charts
              topologyKey: kubernetes.io/hostname
      serviceAccountName: factorio-admin
      securityContext:
        supplementalGroups: [845]
      containers:
        - name: factorio-admin
          image: ghcr.io/manamana32321/factorio-admin:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: factorio-data
              mountPath: /factorio
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 500m
      volumes:
        - name: factorio-data
          persistentVolumeClaim:
            claimName: factorio-factorio-server-charts-datadir
---
apiVersion: v1
kind: Service
metadata:
  name: factorio-admin
  namespace: factorio
spec:
  selector:
    app: factorio-admin
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: factorio-admin
  namespace: factorio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
spec:
  tls:
    - hosts:
        - factorio-admin.json-server.win
      secretName: factorio-admin-tls
  rules:
    - host: factorio-admin.json-server.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: factorio-admin
                port:
                  number: 80
